--- a/src/package.xml
+++ b/src/package.xml
@@ -1,8 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-<types>
+<?xml version="1.0" encoding="UTF-8"?>
+<Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>37.0</version>
+    <types>
+        <members>ARApexClass1</members>
+        <members>ARApexClass4</members>
+        <members>ARApexclass2</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
         <members>LC03_Picklist</members>
         <name>AuraDefinitionBundle</name>
- 
     </types>
-    <version>37.0</version>
 </Package>
