2nd time classes added.

--- a/src/package.xml
+++ b/src/package.xml
@@ -5,6 +5,10 @@
         <members>ARApexClass1</members>
         <members>ARApexClass4</members>
         <members>ARApexclass2</members>
+        <members>ARApexclass234</members>
+        <members>ARApexclass2345</members>
+        <members>Ac1</members>
+        <members>Ac2</members>
         <name>ApexClass</name>
     </types>
     <types>
