--- a/src/package.xml
+++ b/src/package.xml
@@ -9,6 +9,9 @@
         <members>ARApexclass2345</members>
         <members>Ac1</members>
         <members>Ac2</members>
+        <members>Ac3</members>
+        <members>AccP1</members>
+        <members>AccP11</members>
         <name>ApexClass</name>
     </types>
     <types>
